--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                 </div>
             </div>
             <div class="row text-center">
-			  <div class="col-md-4">
+			  <div class="col-md-6">
 				<span class="fa-stack fa-4x">
 				  <a href="http://www.github.com/Khouderchah-Alex">
 					<i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -324,7 +324,7 @@
 				<div class="col-md-1">
 				</div>
 			  </div>
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <span class="fa-stack fa-4x">
                       <i class="fa fa-circle fa-stack-2x text-primary"></i>
 					  <a href="mailto:alex.khouderchah@gmail.com?Subject=Hello%20Alex">
@@ -334,29 +334,6 @@
                     <h4 class="service-heading">Email</h4>
                     <p class="text-muted">
 					  I am always on the lookout for new and interesting opportunities. Feel free to contact me at alex.khouderchah@gmail.com!</p>
-                </div>
-                <div class="col-md-4">
-				  <span class="fa-stack fa-4x">
-                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
-					<a href="data/Khouderchah_Alex-Resume.pdf" download>
-                      <i class="fa fa-download fa-stack-1x fa-inverse"></i>
-					</a>
-                  </span>
-                  <h4 class="service-heading">Résumé</h4><br><br>
-				  <div class="col-md-1">
-				  </div>
-				  <div class="col-md-10">
-					<hr class="fancy">
-					<div class="col-md-2">
-					</div>
-					<div class="col-md-8">
-					  <hr class="fancy">
-					</div>
-					<div class="col-md-2">
-					</div>
-				  </div>
-				  <div class="col-md-1">
-				  </div>
                 </div>
             </div>
         </div>
@@ -579,7 +556,7 @@
                                 <p class="item-intro text-muted">Mods (levels, missions, and guns) for Borderlands 1</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/dreams-preview.png" alt="">
 								<ul class="list-inline social-buttons">
-								  <li><a href="mods.html"><i class="fa fa-download"></i></a>
+								  <li><a href="mods.html"><i class="fa fa-external-link"></i></a>
 								  </li>
 								</ul>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
