--- a/articles.html
+++ b/articles.html
@@ -95,7 +95,7 @@
                   <h3 class="list-hider"><a>Artificial and Biological Intelligence</a><hr></h3>
                   <div class="list-hidee collapse in">
                     <h5 class="list-subheading text-muted">Amlang</h5>
-                    <a href="articles/ai/amlang.html">Amlang: The Self-Leveraging Metasystem</a><br>
+                    <a href="articles/ai/amlang_0.html">Amlang: Part 0 - Background</a><br>
                     <h5 class="list-subheading text-muted">Consciousness</h5>
                     <a href="articles/ai/consciousness.html">Consciousness: Lifting the Veil</a><br>
                   </div>
