--- a/articles.html
+++ b/articles.html
@@ -95,7 +95,7 @@
                   <h3 class="list-hider"><a>Artificial and Biological Intelligence</a><hr></h3>
                   <div class="list-hidee collapse in">
                     <h5 class="list-subheading text-muted">Amlang</h5>
-                    <a href="articles/ai/amlang_0.html">Amlang: Part 0 - Background</a><br>
+                    <a href="articles/ai/amlang_0.html">Part 0: Background</a><br>
                     <h5 class="list-subheading text-muted">Consciousness</h5>
                     <a href="articles/ai/consciousness.html">Consciousness: Lifting the Veil</a><br>
                   </div>
@@ -127,10 +127,10 @@
                   <h3 class="list-hider"><a>Tetrad Game Engine</a><hr></h3>
                   <div class="list-hidee collapse in list-left">
                     <h5 class="list-subheading text-muted">Entity-Component-System</h5>
-                    <a href="articles/tetrad/ecs-overview.html">Entity-Component-System: Part 1 - Overview</a><br>
+                    <a href="articles/tetrad/ecs-overview.html">Part 0: Overview</a><br>
                     <!--
-                        <a>Entity-Component-System: Part 2 - Basic Implementation</a><br>
-                        <a>Entity-Component-System: Part 3 - Usage</a><br><br>
+                        <a>Entity-Component-System: Part 1 - Basic Implementation</a><br>
+                        <a>Entity-Component-System: Part 2 - Usage</a><br><br>
                         -->
                         <h5 class="list-subheading text-muted">Graphics System</h5>
                         <a href="articles/tetrad/dither-graphics.html">Dithering in Graphics (WIP)</a>
